2018-02-20    <cerebrum@gagarin.uit.no>

	* update_displayname.py (main): updated url to aliases to jep2n1.uit.no

2018-02-16  Karen   <cerebrum@cleomedes.uit.no>

    * ad_export_autogroups_undervisning.py: Made changes that where necessary for this script to work 
    correctly with new BAS: Updated search terms to reflect changes in the database to group names, and 
    adjusted code to handle these changes. Added functionality to filter away undervisningsenhet groups 
    that are not from this or next semester. Studieprogram with no members are now filtered away. 

2018-02-14    <cerebrum@cleomedes.uit.no>

	* process_systemx.py (send_mail): removed the debug flag which prevented emails from being sent

2018-02-12    <cerebrum@cleomedes.uit.no>

	* process_systemx.py (send_mail): whenever a new user is
	registered in system-x, a email will now be sent to the requestor
	and user with a copy to bas-admin@uit.no

2018-01-31    <cerebrum@cleomedes.uit.no>

	* export_cristin.py (LTPersonRepresentation.__init__): Removed function that validates fnr. The test will
	fail for all fnr with 5 0(zero) at the end (coming from PAGA)

	* export_safecom.py (safecom_export.list_affiliations): moved logger.warn to logger.debug

2018-01-24    <cerebrum@cleomedes.uit.no>

	* export_cristin.py (output_OU): Refactored how to collect ou.name as the old method no longer returned propper data.
	Refactored how to collect ou.acronym as the old method no longer returned propper data.

2018-01-18  Karen   <cerebrum@cleomedes.uit.no>

    * import_tlf.py (process_telefoni): Removed unnecessary logger warnings about empty phone numbers.

    * import_tlf.py (is_new_number): Minor bugfix.

2018-01-18    <cerebrum@cleomedes.uit.no>
    
    * maillog.py: Added to repo.

2018-01-17  Karen   <cerebrum@cleomedes.uit.no>

    * import_tlf.py: Made changes to import_tlf.py so that it only updates telephone 
    numbers that have actually changed.

2018-01-02    <cerebrum@cleomedes.uit.no>
